# llm-proxy-rs

./: ANTHROPIC_V1_SUPPORT.md  Cargo.toml  README_IMAGE_SUPPORT.md  config.toml
anthropic-request/: Cargo.toml
anthropic-request/src/: additional_model_request_fields.rs  anthropic_beta.rs  cache_control.rs  content.rs  context_management.rs  document_source.rs  image_source.rs  lib.rs  message.rs  output_config.rs  system.rs  thinking.rs  tool.rs  tool_result_content.rs
anthropic-request/src/content/: assistant_content.rs  mod.rs  user_content.rs
anthropic-request/tests/: api_conformance.rs
anthropic-response/: Cargo.toml
anthropic-response/src/: content_block.rs  content_block_delta.rs  delta.rs  event.rs  events.rs  lib.rs  message.rs  stop_reason.rs  stream.rs
anthropic-response/tests/: api_conformance.rs  thinking_serialization_test.rs
bedrock/: Cargo.toml
bedrock/src/: content_blocks.rs  lib.rs  message.rs
chat/: Cargo.toml
chat/src/: bedrock.rs  converters.rs  error.rs  lib.rs  openai.rs  providers.rs  retry.rs
chat/src/bedrock/: anthropic.rs  mod.rs  openai.rs
chat/src/provider/: anthropic.rs  mod.rs  openai.rs
chat/src/providers/: anthropic.rs  openai.rs
client/: Cargo.toml
client/examples/: simple_chat.rs  streaming_chat.rs
client/src/: config.rs  delta.rs  event.rs  handler.rs  lib.rs  tool.rs
client/src/processor/: chat_completions_response.rs  data.rs  delta.rs  mod.rs  response.rs
common/: Cargo.toml
common/src/: lib.rs
request/: Cargo.toml
request/src/: content.rs  image_url.rs  lib.rs  message.rs  system_content.rs  tool.rs
response/: Cargo.toml
response/src/: lib.rs
server/: Cargo.toml
server/src/: error.rs  lib.rs  main.rs  utils.rs
server/src/handlers/: anthropic.rs  anthropic_beta.rs  mod.rs  openai.rs
server/tests/: e2e.rs  retry_integration.rs
