[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
anthropic-request = { path = "../anthropic-request" }
anthropic-response = { path = "../anthropic-response" }
async-trait = "0.1.89"
aws-sdk-bedrockruntime = "1.125.0"
aws-smithy-types = "1.4.4"
axum = "0.8.8"
chrono = "0.4.43"
futures = "0.3.31"
request = { path = "../request" }
uuid = { version = "1.20.0", features = ["v4"] }
response = { path = "../response" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["time", "sync", "rt"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
reqwest = "0.13.2"
reqwest-streams = { version = "0.15.0", features = ["json"] }
