[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
futures-util = "0.3.31"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
response = { path = "../response" }
request = { path = "../request" }
serde_json = "1.0.143"
tracing = "0.1.41"

[dev-dependencies]
chrono = "0.4.42"
tokio = { version = "1.47.1", features = ["full"] }
