[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
anthropic-request = { path = "../anthropic-request" }
anthropic-response = { path = "../anthropic-response" }
aws-config = "1.8.17"
aws-sdk-bedrockruntime = "1.131.0"
axum = "0.8.9"
chat = { path = "../chat" }
common = { path = "../common" }
config = "0.15.23"
request = { path = "../request" }
response = { path = "../response" }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
aws-smithy-runtime-api = "1.12.1"
aws-smithy-types = "1.4.8"
base64 = "0.22.1"
http-body-util = "0.1.3"
serde_json = "1.0.150"
tower = "0.5.3"
